--- a/experiments/nlp/interp_bert_sst.ipynb
+++ b/experiments/nlp/interp_bert_sst.ipynb
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "tokenizer = BertTokenizer.from_pretrained(mdir)\n",
-    "clf = BertForSequenceClassification.from_pretrained(mdir)\n",
+    "clf = BertForSequenceClassification.from_pretrained(mdir).eval().to(device)\n",
     "masked_predictor = BertForMaskedLM.from_pretrained(default).eval().to(device)"
    ]
   },
@@ -148,22 +148,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  0%|          | 0/30522 [00:00<?, ?it/s]\u001b[A\n",
-      "  0%|          | 2/30522 [00:00<46:45, 10.88it/s]\u001b[A\n",
-      "  0%|          | 4/30522 [00:00<46:17, 10.99it/s]\u001b[A\n",
-      "  0%|          | 6/30522 [00:00<45:07, 11.27it/s]\u001b[A\n",
-      "  0%|          | 8/30522 [00:00<44:43, 11.37it/s]\u001b[A\n",
-      "  0%|          | 10/30522 [00:00<44:08, 11.52it/s]\u001b[A\n",
-      "  0%|          | 12/30522 [00:01<43:54, 11.58it/s]\u001b[A"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n = 30522 # 30522\n",
     "vals = np.zeros(n)\n",
@@ -186,27 +171,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ave=0.817 ave_weighted=0.902 pred_good=0.997 pred_bad=0.003\n"
+      "ave=0.813 ave_weighted=0.944 pred_good=0.997 pred_bad=0.003\n"
      ]
     }
    ],
    "source": [
     "print(f'ave={ave:0.3f} ave_weighted={ave_weighted:0.3f} pred_good={pred_good:0.3f} pred_bad={pred_bad:.3f}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
