read sst as text

--- a/experiments/nlp/interp_bert_sst.ipynb
+++ b/experiments/nlp/interp_bert_sst.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "from util import *\n",
-    "device = 'cpu'"
+    "device = 'cuda'"
    ]
   },
   {
@@ -270,10 +270,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import pickle as pkl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lines = open('sent-conv-torch/data/stsa.binary.test', 'r').read()\n",
+    "lines = lines.split('\\n')[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classes = [int(line[0]) for line in lines]\n",
+    "reviews = [line[2:] for line in lines]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def contrib_score(word: str, review: str, tokenizer, clf, masked_predictor):\n",
+    "    '''Get contribution score for (the first occurence of) word in review\n",
+    "    Later: uses masked_predictor to get conditional distr for word\n",
+    "    '''\n",
+    "    \n",
+    "    # use masked predictor to get conditional distr for word\n",
+    "    \n",
+    "    inds_max, preds_masked = predict_masked(masked_predictor,\n",
+    "                                            tokenizer,\n",
+    "                                            text=text,\n",
+    "                                            masked_index=6)\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "num_reviews = 100\n",
+    "\n",
+    "scores = {}\n",
+    "\n",
+    "# loop over reviews\n",
+    "for i in range(num_reviews):\n",
+    "    review = reviews[i]\n",
+    "    \n",
+    "    # loop over words in review\n",
+    "    for word in reviews.split():\n",
+    "        \n",
+    "        # get contrib score for word\n",
+    "        contrib_score = get_contrib_score(word, review, tokenizer, clf, masked_predictor)\n",
+    "        \n",
+    "        if not word in scores:\n",
+    "            scores[word] = [contrib_score]\n",
+    "        else:\n",
+    "            scores[word].append(contrib_score)"
+   ]
   }
  ],
  "metadata": {
