get word scores

--- a/experiments/nlp/interp_bert_sst.ipynb
+++ b/experiments/nlp/interp_bert_sst.ipynb
@@ -153,7 +153,7 @@
     "    sampled_word = inds_max[i]\n",
     "    \n",
     "    s = f'{t} {tokenizer.convert_ids_to_tokens([sampled_word])[0]}'\n",
-    "    vals[j] = pred(s, tokenizer, clf)\n",
+    "    vals[j] = pred(s, tokenizer, clf, device)\n",
     "    weights[j] = preds_masked[sampled_word]\n",
     "    \n",
     "ave = np.mean(vals)\n",
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,22 +280,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lines = open('sent-conv-torch/data/stsa.binary.test', 'r').read()\n",
-    "lines = lines.split('\\n')[:10]"
+    "lines = open('data/stsa.binary.test', 'r').read()\n",
+    "lines = [line for line in lines.split('\\n') if not line is '']\n",
+    "\n",
+    "classes = [int(line[0]) for line in lines]\n",
+    "reviews = [line[2:] for line in lines]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:00<00:00, 37.58it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 37.86it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 41.01it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 41.04it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 40.63it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 41.04it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 41.29it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 41.00it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 40.46it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 40.61it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "classes = [int(line[0]) for line in lines]\n",
-    "reviews = [line[2:] for line in lines]"
+    "def contrib_score(word: str, review: str, tokenizer, clf, masked_predictor, device='cuda'):\n",
+    "    '''Get contribution score for (the first occurence of) word in review\n",
+    "    Later: uses masked_predictor to get conditional distr for word\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    contrib_score_iid, contrib_score_conditional\n",
+    "    '''\n",
+    "    # original prediction\n",
+    "    pred_orig = pred(review, tokenizer, clf, device)\n",
+    "    \n",
+    "    # use masked predictor to get conditional distr for word\n",
+    "    inds_max, preds_masked = predict_masked(masked_predictor,\n",
+    "                                            tokenizer,\n",
+    "                                            text=review,\n",
+    "                                            masked_str=word)\n",
+    "    \n",
+    "    # conditional mean pred\n",
+    "    n = 100 # there are 30522, we are only going to use the top ones\n",
+    "    # the top ones have the highest prob, so should be okay\n",
+    "    vals = np.zeros(n)\n",
+    "    weights = np.zeros(n)\n",
+    "\n",
+    "    for i in tqdm(range(n)):\n",
+    "        ind_max = inds_max[i]\n",
+    "        sampled_word = tokenizer.convert_ids_to_tokens([ind_max])[0]\n",
+    "        s = review.replace(word, sampled_word)\n",
+    "        vals[i] = pred(s, tokenizer, clf, device)\n",
+    "        weights[i] = preds_masked[ind_max]\n",
+    "\n",
+    "    ave = np.mean(vals)\n",
+    "    ave_weighted = np.average(vals, weights=weights)\n",
+    "\n",
+    "    return pred_orig - ave, pred_orig - ave_weighted\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "num_reviews = 100 # 1821\n",
+    "scores_iid = {}\n",
+    "scores_conditional = {}\n",
+    "\n",
+    "# loop over reviews\n",
+    "for i in range(num_reviews):\n",
+    "    review = reviews[i]\n",
+    "    \n",
+    "    # loop over words in review\n",
+    "    for word in review.split():\n",
+    "        \n",
+    "        if not word in [';', ',', '.', '!', '?', '/']:\n",
+    "\n",
+    "            # get contrib score for word\n",
+    "            try:\n",
+    "                contrib_score_iid, contrib_score_conditional = \\\n",
+    "                contrib_score(word, review, tokenizer, clf, masked_predictor, device)\n",
+    "\n",
+    "                if not word in scores_iid:\n",
+    "                    scores_iid[word] = [contrib_score_iid]\n",
+    "                    scores_conditional[word] = [scores_conditional]\n",
+    "                else:\n",
+    "                    scores_iid[word].append(contrib_score_iid)\n",
+    "                    scores_conditional[word].append(contrib_score_conditional)\n",
+    "            except:\n",
+    "                pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1821"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(reviews)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-0.0012322361231781541,\n",
+       " -0.001289742160588503,\n",
+       " 0.0001262711855815723,\n",
+       " -0.002692339214263484,\n",
+       " -0.002509033738169819,\n",
+       " -0.002711162413470447,\n",
+       " -0.00042508165352046485,\n",
+       " -0.0003323640790767967]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[np.mean(scores_iid[k]) for k in scores_iid]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'no': [{...}, -0.0001328857860879198],\n",
+       " 'movement': [{...}],\n",
+       " ',': [{...}, 5.872776173905926e-05],\n",
+       " 'not': [{...}],\n",
+       " 'much': [{...}],\n",
+       " 'of': [{...}],\n",
+       " 'anything': [{...}],\n",
+       " '.': [{...}]}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores_conditional"
    ]
   },
   {
@@ -303,40 +458,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def contrib_score(word: str, review: str, tokenizer, clf, masked_predictor):\n",
-    "    '''Get contribution score for (the first occurence of) word in review\n",
-    "    Later: uses masked_predictor to get conditional distr for word\n",
-    "    '''\n",
-    "    \n",
-    "    # use masked predictor to get conditional distr for word\n",
-    "    \n",
-    "    inds_max, preds_masked = predict_masked(masked_predictor,\n",
-    "                                            tokenizer,\n",
-    "                                            text=text,\n",
-    "                                            masked_index=6)\n",
-    "    \n",
-    "\n",
-    "    \n",
-    "num_reviews = 100\n",
-    "\n",
-    "scores = {}\n",
-    "\n",
-    "# loop over reviews\n",
-    "for i in range(num_reviews):\n",
-    "    review = reviews[i]\n",
-    "    \n",
-    "    # loop over words in review\n",
-    "    for word in reviews.split():\n",
-    "        \n",
-    "        # get contrib score for word\n",
-    "        contrib_score = get_contrib_score(word, review, tokenizer, clf, masked_predictor)\n",
-    "        \n",
-    "        if not word in scores:\n",
-    "            scores[word] = [contrib_score]\n",
-    "        else:\n",
-    "            scores[word].append(contrib_score)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
