update binray cifar10 and add catsvdogs

--- a/experiments/mimic/ours_weighing_no_joint_training.ipynb
+++ b/experiments/mimic/ours_weighing_no_joint_training.ipynb
@@ -572,15 +572,9 @@
    "outputs": [],
    "source": [
     "def asymmetric_entropy(p, w):\n",
-    "    return (p * (1 - p)) / ((-2 * w + 1) * p + w ** 2)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return (p * (1 - p)) / ((-2 * w + 1) * p + w ** 2)\n",
+    "\n",
+    "\n",
     "# uncertainties = asymmetric_entropy(outputs_val[:, 5], y_train.values.mean())\n",
     "uncertainties = asymmetric_entropy(outputs_val[:, 1], cutoff)"
    ]
@@ -735,9 +729,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
