refactor mimic experiments

--- a/experiments/mimic/ours_no_weighing_no_joint_training.ipynb
+++ b/experiments/mimic/ours_no_weighing_no_joint_training.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -13,8 +22,9 @@
     "from torch import nn\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from pacmagic_deeplearning.modeling.classifiers.bayesian.train_utils import make_performance_uncertainty_plot, cross_entropy\n",
-    "\n",
+    "import sys\n",
+    "sys.path.append('../../sli')\n",
+    "from utils import make_performance_uncertainty_plot, cross_entropy\n",
     "from utils import get_weight_tensor_from_class_weights, train, plot_calibration_curve, make_precision_accuracy_plot\n",
     "from utils import NN\n",
     "\n",
@@ -24,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,19 +60,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation loss: 0.36, Train loss: 0.37\n",
-      "Validation loss: 0.19, Train loss: 0.22\n",
-      "Validation loss: 0.13, Train loss: 0.11\n",
-      "Validation loss: 0.11, Train loss: 0.09\n",
+      "Validation loss: 0.34, Train loss: 0.34\n",
+      "Validation loss: 0.18, Train loss: 0.20\n",
+      "Validation loss: 0.12, Train loss: 0.10\n",
+      "Validation loss: 0.12, Train loss: 0.09\n",
       "Validation loss: 0.10, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
       "Validation loss: 0.09, Train loss: 0.09\n",
       "Validation loss: 0.09, Train loss: 0.09\n",
       "Validation loss: 0.09, Train loss: 0.09\n",
@@ -92,24 +101,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation loss: 0.27, Train loss: 0.33\n",
-      "Validation loss: 0.19, Train loss: 0.20\n",
-      "Validation loss: 0.14, Train loss: 0.12\n",
-      "Validation loss: 0.13, Train loss: 0.10\n",
-      "Validation loss: 0.11, Train loss: 0.10\n",
+      "Validation loss: 0.28, Train loss: 0.29\n",
+      "Validation loss: 0.19, Train loss: 0.19\n",
+      "Validation loss: 0.14, Train loss: 0.11\n",
+      "Validation loss: 0.14, Train loss: 0.10\n",
+      "Validation loss: 0.12, Train loss: 0.09\n",
       "Validation loss: 0.10, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
       "Validation loss: 0.09, Train loss: 0.09\n",
       "Validation loss: 0.09, Train loss: 0.09\n",
       "Validation loss: 0.09, Train loss: 0.09\n",
@@ -139,22 +143,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation loss: 0.42, Train loss: 0.45\n",
-      "Validation loss: 0.25, Train loss: 0.27\n",
+      "Validation loss: 0.41, Train loss: 0.43\n",
+      "Validation loss: 0.25, Train loss: 0.26\n",
       "Validation loss: 0.13, Train loss: 0.13\n",
       "Validation loss: 0.11, Train loss: 0.09\n",
       "Validation loss: 0.10, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
+      "Validation loss: 0.09, Train loss: 0.08\n",
       "Validation loss: 0.08, Train loss: 0.08\n",
       "Validation loss: 0.08, Train loss: 0.08\n",
       "Validation loss: 0.08, Train loss: 0.08\n",
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +589,8 @@
    "outputs": [],
    "source": [
     "# uncertainties = asymmetric_entropy(outputs_val[:, 5], y_train.values.mean())\n",
-    "uncertainties = asymmetric_entropy(outputs_val[:, 1], cutoff)"
+    "uncertainties = asymmetric_entropy(outputs_val[:, 1], cutoff)\n",
+    "# ouputs_val(n x 3)(underconfident, canon, over)"
    ]
   },
   {
@@ -773,6 +775,7 @@
     }
    ],
    "source": [
+    "# use optimal cutoff for canonical model\n",
     "for i in range(preds.shape[1]):\n",
     "    outputs = preds[:, i]\n",
     "    \n",
@@ -786,7 +789,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cutoff = np.percentile(outputs_val, 100 * (1-y_train.values.mean()), axis=0)\n"
+    "# this cutoff is the optimal cutoff for all 3 models separately\n",
+    "cutoff = np.percentile(outputs_val, 100 * (1 - y_train.values.mean()), axis=0)"
    ]
   },
   {
@@ -828,7 +832,7 @@
     "    \n",
     "    print(precision_score(target_val, outputs))\n",
     "    print(recall_score(target_val, outputs))\n",
-    "    print('\\n')\n"
+    "    print('\\n')"
    ]
   },
   {
@@ -855,9 +859,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
