--- a/experiments/mimic/dropout_no_weighing.ipynb
+++ b/experiments/mimic/dropout_no_weighing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,18 +10,20 @@
     "from torch import nn\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from pacmagic_deeplearning.modeling.classifiers.bayesian.train_utils import make_performance_uncertainty_plot, cross_entropy\n",
+    "# from pacmagic_deeplearning.modeling.classifiers.bayesian.train_utils import make_performance_uncertainty_plot, cross_entropy\n",
+    "from utils import make_performance_uncertainty_plot, cross_entropy, plot_calibration_curve\n",
+    "\n",
     "from torch.optim import SGD\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "from pacmagic.visualizing.model_plots import plot_calibration_curve\n",
+    "# from pacmagic.visualizing.model_plots import plot_calibration_curve\n",
     "from utils import MCDropout, train"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,120 +77,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation loss: 0.30, Train loss: 0.37\n",
-      "Validation loss: 0.18, Train loss: 0.18\n",
-      "Validation loss: 0.15, Train loss: 0.15\n",
-      "Validation loss: 0.14, Train loss: 0.14\n",
-      "Validation loss: 0.13, Train loss: 0.12\n",
-      "Validation loss: 0.12, Train loss: 0.11\n",
-      "Validation loss: 0.11, Train loss: 0.11\n",
-      "Validation loss: 0.11, Train loss: 0.10\n",
-      "Validation loss: 0.10, Train loss: 0.10\n",
-      "Validation loss: 0.10, Train loss: 0.10\n",
-      "Validation loss: 0.10, Train loss: 0.09\n",
-      "Validation loss: 0.10, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.09\n",
-      "Validation loss: 0.09, Train loss: 0.08\n",
-      "Validation loss: 0.09, Train loss: 0.08\n",
-      "Validation loss: 0.09, Train loss: 0.08\n",
-      "Validation loss: 0.09, Train loss: 0.08\n",
-      "Validation loss: 0.09, Train loss: 0.08\n",
-      "Validation loss: 0.09, Train loss: 0.08\n",
-      "Validation loss: 0.09, Train loss: 0.08\n",
-      "Validation loss: 0.09, Train loss: 0.08\n",
-      "Validation loss: 0.09, Train loss: 0.08\n",
-      "Validation loss: 0.09, Train loss: 0.08\n",
-      "Validation loss: 0.09, Train loss: 0.08\n",
-      "Validation loss: 0.09, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.09, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n",
-      "Validation loss: 0.08, Train loss: 0.08\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "MCDropout(\n",
-       "  (f): Sequential(\n",
-       "    (0): Linear(in_features=44, out_features=64, bias=True)\n",
-       "    (1): ReLU()\n",
-       "    (2): Dropout(p=0.1)\n",
-       "    (3): Linear(in_features=64, out_features=1, bias=True)\n",
-       "  )\n",
-       "  (nll): BCEWithLogitsLoss()\n",
-       ")"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train(model, data, target, data_val, target_val, optimizer, quantile)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,9 +343,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
