--- a/experiments/mimic/ours_no_weighing_no_joint_training.ipynb
+++ b/experiments/mimic/ours_no_weighing_no_joint_training.ipynb
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
        "(4477, 44)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -828,60 +828,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = X_train.values[:, 1:]\n",
-    "feature_names = list(X_train.columns)[1:]\n",
-    "models = [canonical, underconfident, overconfident]"
+    "data = X_train.values #[:, 1:]\n",
+    "feature_names = list(X_train.columns) #[1:]\n",
+    "feature_names = [n.replace('_', ' ') for n in feature_names]\n",
+    "models = [underconfident, canonical, overconfident]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
+    "x = data[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import partial\n",
+    "# from scipy.special import softmax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def proba(x, f):\n",
+    "    x = torch.Tensor(x)\n",
+    "    if len(x.shape) == 1:\n",
+    "        x = x.unsqueeze(0)\n",
+    "    with torch.no_grad():\n",
+    "#         print('x shape', x.shape)\n",
+    "        out = torch.sigmoid(f(x)[0])\n",
+    "        out = torch.cat([1 - out, out], dim=1).numpy()\n",
+    "    return out\n",
+    "\n",
     "from sli import Explainer\n",
     "explainer = Explainer(data, feature_names=feature_names)\n",
-    "explainer.calc_percentiles(models[0].predict_proba, models[1].predict_proba, \n",
-    "                           models[2].predict_proba)\n",
-    "expl_dicts = [expl_dicts.append(explainer.explain_instance(x, models[i].predict_proba, \n",
-    "              class_num, return_table=False)) for i in range(3)]\n",
+    "explainer.calc_percentiles(partial(proba, f=models[0]),\n",
+    "                           partial(proba, f=models[1]),\n",
+    "                           partial(proba, f=models[2])\n",
+    "                          )\n",
+    "expl_dicts = [explainer.explain_instance(x, partial(proba, f=models[i]), return_table=False) for i in range(3)]\n",
     "explainer.viz_expl(expl_dicts[1], [expl_dicts[0], expl_dicts[2]], \n",
     "                   show_stds=True, # display stddevs for the feature importances\n",
-    "                   point_id='', # display id of this point\n",
+    "                   point_id=None, # display id of this point\n",
+    "                   round=3, \n",
     "                   filename='out.html') # saves to fully-contained interactive html file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'predict_proba' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-88-766f196ac0d4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpredict_proba\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'predict_proba' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[0.7305468 , 0.26945314]], dtype=float32)"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "predict_proba"
+    "softmax(proba(x, models[0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(x.shape)"
+   ]
   }
  ],
  "metadata": {
